# FastLog

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  vcpkg.json
benchmarks/: CMakeLists.txt  compare_spdlog.cpp  throughput.cpp
cmake/: fastlogConfig.cmake.in
docs/: _config.yml  api-reference.md  design.md  index.md
example/: CMakeLists.txt  advanced_example.cpp  example.cpp  simple_example.cpp
fastlog/: fastlog.hpp
fastlog/detail/: facade.hpp  formatter.hpp  logbuffer.hpp  logfstream.hpp  logger.hpp  loglevel.hpp  manager.hpp  registry.hpp  sink.hpp  sinks.hpp  stacktrace.hpp  support.hpp  types.hpp  util.hpp
tests/: CMakeLists.txt  test_fastlog.cpp
